
[package]
name = "contrato_reportes" #-> acá le cambias por el nombre de TU proyecto reportes
version = "0.1.0"
authors = ["[] <[]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
ClubSemRust = { path = "ClubSemRust", default-features = false, features = ["ink-as-dependency"] } # -> acá, reemplezas ClubSemRust, por el nombre de TU club

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }


[dev-dependencies]
ink_e2e = "4.2.0"
# faux = "0.1.9"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "ClubSemRust/std"] # -> acá, reemplezas ClubSemRust, por el nombre de TU club

ink-as-dependency = []
e2e-tests = []
